# airen_env

./: .gitignore  Dockerfile  README.md  blog.md  client.py  colab_train.ipynb  generate_comparison_plots.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  train_grpo.py  train_grpo_async.py
airen_env/: __init__.py  client.py  models.py  rubrics.py
airen_env/server/: Dockerfile  __init__.py  _gradio_extra_tabs.py  agent_deadlock_detector.py  airen_environment.py  app.py  arl.py  attacker_agent.py  compliance_enforcer.py  context_poisoning_detector.py  demo_runner.py  digital_twin.py  dynamic_generator.py  generalization_eval.py  hitl_evaluator.py  incident_engine.py  incident_replay.py  infinite_loop_detector.py  insights.py  llm_judge.py  multi_agent_spec_validator.py  observability.py  persistent_agent_memory.py  requirements.txt  reward.py  reward_hacking_detector.py  sandbox.py  sandbox_advanced.py  schema_drift_detector.py  self_evolving_curriculum.py  self_reward_judge.py  state_drift_monitor.py  trace_logger.py
airen_env/server/routers/: __init__.py  incident_router.py  replay_router.py  training_router.py
completions/: test_ep_001.json
dashboards/: airen-production.json
experiments/: cross_env_transfer.py
k8s/: airen-deployment.yaml
server/: Dockerfile  airen_environment.py  app.py  attacker_agent.py  dynamic_generator.py  incident_engine.py  requirements.txt  reward.py  trace_logger.py
